Fix for menu problem. Content fixes and additions.
Menu Fix:
- Uneven borders&size for item with submenu fixed
- Touch screens should now no longer require double-tap in submenu

Content:
- Valentin added to OK
- CoE address added
- Removed board in OK page
- Draft Sponsor page display problems with some screen sizes

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -20,7 +20,7 @@ $color-navigation-active: $color-menu-text-base;
 $color-navigation-level2: $color-menu-text-base;
 $color-navigation-level2-active: $color-menu-text-base; 
 
-$color-navigation-caret: #FF0000;
+$color-navigation-caret: $color-menu-text-base;
 
 $color-background-navigation-level1: $color-site-primary;
 $color-background-navigation-level1-active: $color-site-primary-light;
@@ -179,8 +179,8 @@ $lap-end:               $desk-start - 1px;
     ul, li
     {    
         list-style-type: none;
-
         padding:0;
+        margin: 0;
     }         
 }
 
@@ -318,7 +318,7 @@ $lap-end:               $desk-start - 1px;
             {     
                 display: block;
             }
-            > li:hoover
+            > li:hover
             {
                 background-color: $color-background-collapsed-navigation-level1-active;
             }
@@ -359,17 +359,16 @@ $lap-end:               $desk-start - 1px;
             background-color: $color-background-navigation-level1-active;
         }
     }
-      
+
     li 
     {    
         line-height: 1.5;
-        padding: 0.5em 1em;
 	color: $color-menu-text-base;
         
         a, 
         .nolink
         {
-
+            padding: 0.5em 1em;
             color: $color-navigation-inverted;
             outline: 0;
             text-decoration:none;         
@@ -441,8 +440,6 @@ $lap-end:               $desk-start - 1px;
             
             > li
             {   
-                padding:0.5em 0;
-                
                 > a , 
                 .nolink
                 {                    
@@ -466,7 +463,6 @@ $lap-end:               $desk-start - 1px;
                 background-color: $color-background-collapsed-navigation-level2;
             
                 li {
-                    padding: 0;
             
                     > a 
                     {      
